--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-								</a><a class="work-item" href="#" data-groups="[&quot;experiments&quot;]">
+								</a><a class="work-item" href="project-cubx.html" data-groups="[&quot;experiments&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_4.png" alt="Booklet with Sport Grids">
 									</div>
