--- a/project-cubx.html
+++ b/project-cubx.html
@@ -101,7 +101,7 @@ As my first year applying for the scholarship, I created CUBX, a puzzle carefull
 									<div class="project-image"><img src="img/project-cubx/image_6.png" alt="Damoon"></div>
 								</div>
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-cubx/image_5.gif" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-cubx/image.gif" alt="Damoon"></div>
 								</div>
 							</div>
 						</div>
