--- a/project-cubx.html
+++ b/project-cubx.html
@@ -64,7 +64,7 @@
 								<h3>The Challenge</h3>
 								<p>Apple's WWDC Scholarship Program enables students and new developers to request the chance to attend the conference with most of the expenses covered.
 
-As my first year applying for the scholarship, I created CUBX, a puzzle carefully made for players who like the genre - or for those who need some moments of visual tranquility.</p>
+In my first year applying for the scholarship, I created CUBX, a puzzle carefully made for players who like the genre - or for those who need some moments of visual tranquility.</p>
 								<!-- <ul class="project-services">
 									<li>Experiment</li> -->
 									<!-- <li>Playground</li>
