--- a/project-cubx.html
+++ b/project-cubx.html
@@ -141,19 +141,19 @@ In my first year applying for the scholarship, I created CUBX, a puzzle carefull
 						<div class="footer-contacts">
 							<div class="wrap">
 								<div class="address">
-									<p>26 Hillside Street<br>House 35<br>London, UK</p>
-								</div><a class="email" href="mailto:hello@blunes.com">hello@blunes.com</a><br><a class="phone" href="tel:5226669113">522-666-9113</a>
+									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
+									<p>London, UK</p>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-12">
 						<div class="social-links">
 							<ul>
-								<li><a class="facebook" href="#"></a></li>
-								<li><a class="twitter" href="#"></a></li>
-								<li><a class="instagram" href="#"></a></li>
-								<li><a class="dribbble" href="#"></a></li>
-								<li><a class="behance" href="#"></a></li>
+								<!-- <li><a class="facebook" href="#"></a></li> -->
+								<li><a class="linkedin" href="https://www.linkedin.com/in/rodolfodiniz/" target="_blank"></a></li>
+								<li><a class="medium" href="https://medium.com/@rodolfodinizbiazi" target="_blank"></a></li>
+								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
