--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 							<div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1">
 								<div class="page-section-title text-center">
 									<h2>In The Media</h2>
-									<p class="lead">Moments where my identity was public revealed.</p>
+									<p class="lead">Moments when my identity was public revealed.</p>
 								</div>
 							</div>
 						</div>
@@ -504,7 +504,7 @@
 																													<!-- <div class="row"> -->
 																														<div class="col-lg-12">
 																															<div class="studio-services">
-																																<h4>Bibliographical Production</h4>
+																																<h4>My Academic Production</h4>
 																																		<ul class="project-services">
 																																			<li>BIAZI, Rodolfo D. Evaluation of educational games for teaching and learning agile methods. 2018. (Presentation/Seminar).</li>	</ul>
 																																			<ul class="project-services"><li>HERNANDEZ, A. A. R.; EFING, A. C.; BIAZI, Rodolfo D. El control social informal en la sociedad de la información. REVISTA DE DERECHO COMUNICACIONES Y NUEVAS TECNOLOGIAS (EN LÍNEA), v. 16, p. 1-16, 2017.</li></ul>
