--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -51,50 +51,56 @@
 		</header>
 		<main>
 			<div class="spacer">
+				<div class="intro">
+					<div class="intro-image"><img src="https://www.dl.dropboxusercontent.com/s/n8aai7svcvakhrb/RPReplay_Final1586194803%202.mov" alt="Damoon"></div>
+					<div class="intro-text">
+						<h1 style="color:#FFFFFF">Juicy Way</h1>
+					</div>
+				</div>
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
 							<div class="project-intro mar-top-lg">
-								<h1 class="project-title">Juicy Way</h1>
-								<p class="project-description">Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience developed by a designer and a developer.</p>
-								<ul class="project-services">
+								<!-- <h1 class="project-title">Juicy Way</h1> -->
+								<p class="project-description">Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience created by a designer and a developer.</p>
+								<!-- <ul class="project-services">
 									<li>App</li>
-								</ul>
+								</ul> -->
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12">
 							<div class="mar-top-lg">
-								<div class="project-image"><img src="img/project-1/image_1.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-juicyway/image_1.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Flyby Your Hangover</h3>
+								<h3 class="title">The Flight Plan</h3>
 							</div>
 							<div class="col-md-7">
-								<p>Inspired by the name of the product, we created the Flyby 'loop' as a visual representation of the product and how it allows you to 'fly by your hangover'. The loop is infinitely adaptable to its surroundings; be that the brand logo, typography, imagery or iconography and provides a flexible brand asset that is instantly identifiable to the Flyby brand. With help from James Huson, we developed an animation style to bring a life of it's own to the loop device.</p>
+								<p>At Apple Developer Academy we were challenged to develop and publish a <b>hyper casual game</b> and to apply the freemium monetization so we would be able to track the results from it. Some general parameters that we had to follow: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes. </p>
 							</div>
 						</div>
 					</div>
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-5">
-								<div class="project-image"><img src="img/project-1/image_2.gif" alt="Flyby"></div>
+								<div class="project-image"><img src="https://www.dl.dropboxusercontent.com/s/dtl2qg8e0qo343t/JuicyLogoVideo.gif" alt="Flyby"></div>
 							</div>
 							<div class="col-md-5 offset-md-2">
 								<div class="mar-top-xs">
-									<div class="project-image"><img src="img/project-1/image_3.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-juicyway/image_3.png" alt="Flyby"></div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 offset-md-4">
 								<div class="mar-top-sm">
-									<div class="project-image"><img src="img/project-1/image_4.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-juicyway/image_4.png" alt="Flyby"></div>
 								</div>
 							</div>
 						</div>
@@ -102,62 +108,72 @@
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">A Punchy Personality</h3>
+								<h3 class="title">Lifting Off</h3>
 							</div>
 							<div class="col-md-7">
-								<p>We played heavily on the name of the product and connected it to real life 'hangover' situations in order to bring personality and a friendly, realistic tone to a market that can otherwise be quite dull and boring. </p>
+								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
 							</div>
 						</div>
 					</div>
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-1/image_5.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-juicyway/image_5.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-1/image_6.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-juicyway/image_6.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-10 offset-md-1">
 							<div class="content-quote mar-top-lg">
-								<p>The new Flyby identity is simple, welcoming and memorable — like the product itself, the brand is a direct challenge to a category that is generally boring and full of jargon.</p><span class="author">Sam Lane, Co-Founder @ Alphabet</span>
-							</div>
-						</div>
-					</div>
-					<div class="mar-top-lg">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-1/image_7.png" alt="Flyby"></div>
-							</div>
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-1/image_8.png" alt="Flyby"></div>
-							</div>
-						</div>
-					</div>
-					<div class="project-content mar-top-lg">
-						<div class="row">
-							<div class="col-md-3 offset-md-1">
-								<h3 class="title">The Result</h3>
-							</div>
-							<div class="col-md-7">
-								<p>We created a comprehensive set of guidelines to help Flyby bring the brand to life across all channels. But we continue to work closely together, developing their internal and external communications.</p>
+								<p>The interface of the menu revolves around the concept of having the game just one play-tap away. To achieve that, it was designed to work as a layer that goes on top while the intergalactic spaceship is always traveling through the Juicy Way right behind it.</p>
+								<!-- <span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12">
 							<div class="mar-top-lg">
-								<div class="project-image"><img src="img/project-1/image_9.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-juicyway/image_9.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
+					<!-- <div class="mar-top-lg">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-juicyway/image_8.png" alt="Flyby"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-juicyway/image_7.png" alt="Flyby"></div>
+							</div>
+						</div>
+					</div> -->
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-3 offset-md-1">
+								<h3 class="title">Safe Landing</h3>
+							</div>
+							<div class="col-md-7">
+								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
+								<br> <p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
+								<br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="mar-top-lg">
+								<div class="project-image"><img src="img/project-juicyway/image_9.png" alt="Flyby"></div>
+							</div>
+						</div>
+					</div> -->
 					<div class="next-project">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
 								<p>Next Project</p>
-								<h2><a href="#">Dom Casmurro</a></h2>
+								<h2><a href="#">Ventum</a></h2>
 							</div>
 						</div>
 					</div>
@@ -172,19 +188,19 @@
 						<div class="footer-contacts">
 							<div class="wrap">
 								<div class="address">
-									<p>26 Hillside Street<br>House 35<br>London, UK</p>
-								</div><a class="email" href="mailto:hello@blunes.com">hello@blunes.com</a><br><a class="phone" href="tel:5226669113">522-666-9113</a>
+									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
+									<p>London, UK</p>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-12">
 						<div class="social-links">
 							<ul>
-								<li><a class="facebook" href="#"></a></li>
-								<li><a class="twitter" href="#"></a></li>
-								<li><a class="instagram" href="#"></a></li>
-								<li><a class="dribbble" href="#"></a></li>
-								<li><a class="behance" href="#"></a></li>
+								<!-- <li><a class="facebook" href="#"></a></li> -->
+								<li><a class="linkedin" href="https://www.linkedin.com/in/rodolfodiniz/" target="_blank"></a></li>
+								<li><a class="medium" href="https://medium.com/@rodolfodinizbiazi" target="_blank"></a></li>
+								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
