--- a/project-stackaflag.html
+++ b/project-stackaflag.html
@@ -72,17 +72,17 @@
 						<div class="mar-top-lg">
 							<div class="row">
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-3/image_2.gif" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-stackaflag/JuicyLogoVideo.gif" alt="Damoon"></div>
 								</div>
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-3/image_3.gif" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-stackaflag/image_3.gif" alt="Damoon"></div>
 								</div>
 							</div>
 						</div>
 						<div class="mar-top-lg">
 							<div class="row">
 								<div class="col-lg-5 col-md-12">
-									<div class="project-image"><img src="img/project-3/image_4.png" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-stackaflag/image_4.png" alt="Damoon"></div>
 								</div>
 								<div class="col-lg-6 col-md-12 offset-lg-1">
 									<div class="project-content mar-top-xs">
@@ -95,10 +95,10 @@
 						<div class="mar-top-lg">
 							<div class="row">
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-3/image_5.png" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-stackaflag/image_5.png" alt="Damoon"></div>
 								</div>
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-3/image_6.png" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-stackaflag/image_6.png" alt="Damoon"></div>
 								</div>
 							</div>
 						</div>
@@ -122,19 +122,19 @@
 						<div class="footer-contacts">
 							<div class="wrap">
 								<div class="address">
-									<p>26 Hillside Street<br>House 35<br>London, UK</p>
-								</div><a class="email" href="mailto:hello@blunes.com">hello@blunes.com</a><br><a class="phone" href="tel:5226669113">522-666-9113</a>
+									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
+									<p>London, UK</p>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-12">
 						<div class="social-links">
 							<ul>
-								<li><a class="facebook" href="#"></a></li>
-								<li><a class="twitter" href="#"></a></li>
-								<li><a class="instagram" href="#"></a></li>
-								<li><a class="dribbble" href="#"></a></li>
-								<li><a class="behance" href="#"></a></li>
+								<!-- <li><a class="facebook" href="#"></a></li> -->
+								<li><a class="linkedin" href="https://www.linkedin.com/in/rodolfodiniz/" target="_blank"></a></li>
+								<li><a class="medium" href="https://medium.com/@rodolfodinizbiazi" target="_blank"></a></li>
+								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
