--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -158,7 +158,13 @@
 							<div class="col-md-7">
 								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
 								<br> <p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
-								<br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p>
+
+								<ul class="project-services">
+									<li style="color:#272838">The app is in it's first version and you can <a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> download it</a> at the App Store.</li>
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								</ul>
+								<!-- <br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p> -->
 							</div>
 						</div>
 					</div>
