--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -52,7 +52,7 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="https://www.dl.dropboxusercontent.com/s/n8aai7svcvakhrb/RPReplay_Final1586194803%202.mov" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-juicyway/cover.mp4" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1 style="color:#FFFFFF">Juicy Way</h1>
 					</div>
@@ -89,7 +89,7 @@
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-5">
-								<div class="project-image"><img src="https://www.dl.dropboxusercontent.com/s/dtl2qg8e0qo343t/JuicyLogoVideo.gif" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-juicyway/cover.mp4" alt="Flyby"></div>
 							</div>
 							<div class="col-md-5 offset-md-2">
 								<div class="mar-top-xs">
