--- a/project-cubx.html
+++ b/project-cubx.html
@@ -52,7 +52,7 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="img/project-cubx/tentativa1.gif" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-cubx/CUBXDivided.mp4" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1>CUBX</h1>
 					</div>
