--- a/project-cubx.html
+++ b/project-cubx.html
@@ -76,7 +76,7 @@ In my first year applying for the scholarship, I created CUBX, a puzzle carefull
 							<div class="row">
 
 								<div class="col-md-6">
-									<div class="project-image"><img src="img/project-cubx/image_4.gif" alt="Damoon"></div>
+									<div class="project-image"><img src="img/project-cubx/cubximage.mp4" alt="Damoon"></div>
 								</div>
 								<div class="col-md-6">
 									<div class="project-image"><img src="img/project-cubx/tangram.png" alt="Damoon"></div>
