--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -157,7 +157,7 @@
 							</div>
 							<div class="col-md-7">
 								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
-								<br> <p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
+								<p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
 
 								<!-- <ul class="project-services"> -->
 									<p>You can download the first version of the app on <a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> the App Store.</a></p>
