--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -160,7 +160,13 @@
 								<p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
 
 								<!-- <ul class="project-services"> -->
-									<p>You can download the first version of the app on <a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> the App Store.</a></p>
+								<ul class="project-services">
+									<li style="color:#272838">ou can download the first version of the app on the <a class="smooth-leave" href="https://youtu.be/pSGEoZ1iin4" target="_blank" rel="noopener noreferrer"> pp Store.</a></p>
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								</ul>
+
+									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
 									<!-- <li>Playground</li>
 									<li>iOS Development</li> -->
 								<!-- </ul> -->
