--- a/project-cubx.html
+++ b/project-cubx.html
@@ -52,9 +52,9 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="img/project-cubx/CUBXDivided.mp4" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-cubx/CUBXDividedC.mp4" alt="Damoon"></div>
 					<div class="intro-text">
-						<h1>CUBX</h1>
+						<h1>CUB</h1>
 					</div>
 				</div>
 				<div class="container">
