--- a/project-cubx.html
+++ b/project-cubx.html
@@ -54,7 +54,7 @@
 				<div class="intro">
 					<div class="intro-image"><img src="img/project-cubx/CUBXDividedC.mp4" alt="Damoon"></div>
 					<div class="intro-text">
-						<h1>CUB</h1>
+						<h1>CUBX</h1>
 					</div>
 				</div>
 				<div class="container">
