--- a/project-cubx.html
+++ b/project-cubx.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-	<title>Rodolfo – CUB</title>
+	<title>Rodolfo – CUBX</title>
 	<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="img/favicon-64x64.png" sizes="64x64">
@@ -52,7 +52,7 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="img/project-cubx/CUBXDividedC.mp4" alt="Damoon"></div>
+					<div class="intro-image"><img src="https://www.dl.dropboxusercontent.com/s/cwdegn2f7y0fq31/CUBXDividedC.mp4?dl=0" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1>CUBX</h1>
 					</div>
