--- a/project-cubx.html
+++ b/project-cubx.html
@@ -52,7 +52,7 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="https://www.dl.dropboxusercontent.com/s/cwdegn2f7y0fq31/CUBXDividedC.mp4?dl=0" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-cubx/a1.mp4" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1>CUBX</h1>
 					</div>
