--- a/project-cubx.html
+++ b/project-cubx.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-	<title>Rodolfo – CUBX</title>
+	<title>Rodolfo – CUBI</title>
 	<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="img/favicon-64x64.png" sizes="64x64">
