--- a/project-cubx.html
+++ b/project-cubx.html
@@ -15,6 +15,10 @@
 </head>
 
 <body id="project-3">
+	<video  controls >
+ <source src="sample.mp4" type="video/mp4">
+ <track kind="subtitles" src="sample.vtt" label="gcsubs" srclang="eng">
+</video>
 	<div class="wrap">
 		<header>
 			<div class="container">
