--- a/project-cubx.html
+++ b/project-cubx.html
@@ -15,7 +15,6 @@
 </head>
 
 <body id="project-3">
-
 	<div class="wrap">
 		<header>
 			<div class="container">
@@ -53,7 +52,11 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="img/project-cubx/CUBXCoded.m4v" alt="Damoon"></div>
+					<!-- <video controls>
+  <source src="img/project-cubx/cubx.webm" type='video/webm;codecs="vp8, vorbis"'/>
+  <source src="img/project-cubx/cubx.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
+</video> -->
+					<div class="intro-image"><img src="img/project-cubx/a1.mp4" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1>CUBX</h1>
 					</div>
