--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<div class="work-description">
 										<h4 class="work-title">Hubli</h4>
 									</div>
-								</a><a class="work-item" href="#" data-groups="[&quot;experiments&quot;]">
+								</a><a class="work-item" href="project-stackaflag.html" data-groups="[&quot;experiments&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_5.png" alt="Juicy Way">
 									</div>
