--- a/project-cubx.html
+++ b/project-cubx.html
@@ -69,6 +69,12 @@
 								<p>Apple's WWDC Scholarship Program enables students and new developers to request the chance to attend the conference with most of the expenses covered.
 
 In my first year applying for the scholarship, I created CUBX, a puzzle carefully made for players who like the genre - or for those who need some moments of visual tranquility.</p>
+<!-- <div style="padding-top: 20px"> -->
+<ul class="project-services">
+	<li style="color: #a6a7b5">2019</li>
+	<!-- <li>Art Direction</li> -->
+</ul>
+<!-- </div> -->
 								<!-- <ul class="project-services">
 									<li>Experiment</li> -->
 									<!-- <li>Playground</li>
