--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -46,7 +46,7 @@
 							</ul>
 						</nav><span class="nav-toggle">Menu</span>
 					</div>
-				</div>
+				</di
 			</div>
 		</header>
 		<main>
@@ -55,7 +55,8 @@
 					<div class="intro-image"><img src="img/project-juicyway/cover.mp4" alt="Damoon"></div>
 					<div class="intro-text">
 						<h1 style="color:#FFFFFF">Juicy Way</h1>
-					</div>
+
+						</div>
 				</div>
 				<div class="container">
 					<div class="row">
@@ -63,6 +64,12 @@
 							<div class="project-intro mar-top-lg">
 								<!-- <h1 class="project-title">Juicy Way</h1> -->
 								<p class="project-description">Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience created by a designer and a developer.</p>
+								<!-- <div style="padding-top: 20px"> -->
+								<ul class="project-services">
+									<li>2020</li>
+									<!-- <li>Art Direction</li> -->
+								</ul>
+							<!-- </div> -->
 								<!-- <ul class="project-services">
 									<li>App</li>
 								</ul> -->
