--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<div class="section-title">
 								<h2>Hi, my name is Rodolfo</h2>
 								<!-- <h2>Hi, my name is <span style="color:white;background-color: #000FFF"> Rodolfo </span> </h2> -->
-								<p>I design for user experiences.</p> <p>My job is to unproblematically uncomplicate complicated problems.</p>
+								<p>I design for user experiences.</p> <p>My job is to uncomplicate complicated problems and turn them into opportunities.</p>
 										<!-- <div class="spacer">
 										</div> -->
 						</div>
@@ -144,9 +144,9 @@
 
 
 
-								</a><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
+								</a><a class="work-item" href="project-cluster2.html" data-groups="[&quot;app&quot;]">
 									<div class="work-image">
-										<div class="icon-arrow"></div><img src="img/works/work_2.png" alt="Clusters">
+										<div class="icon-arrow"></div><img src="img/works/work_2.png" alt="Cluster">
 									</div>
 									<div class="work-description">
 										<h4 class="work-title">Cluster</h4>
@@ -159,7 +159,7 @@
 
 								</a><a class="work-item" href="project-cubx.html" data-groups="[&quot;experiments&quot;]">
 									<div class="work-image">
-										<div class="icon-arrow"></div><img src="img/works/work_4.png" alt="Booklet with Sport Grids">
+										<div class="icon-arrow"></div><img src="img/works/work_4.png" alt="CUBX">
 									</div>
 									<div class="work-description">
 										<h4 class="work-title">CUBX</h4>
