--- a/project-cluster.html
+++ b/project-cluster.html
@@ -52,9 +52,9 @@
 		<main>
 			<div class="spacer">
 				<div class="intro">
-					<div class="intro-image"><img src="img/project-3/image_1.png" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-cluster/clusterv.mp4" alt="Damoon"></div>
 					<div class="intro-text">
-						<h1>Cluster</h1>
+						<h1 style="color:#272838">Cluster</h1>
 					</div>
 				</div>
 				<div class="container">
@@ -107,7 +107,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
 								<p>Next Project</p>
-								<h2><a href="#">Dom Casmurro</a></h2>
+								<h2><a href="#">Ventum</a></h2>
 							</div>
 						</div>
 					</div>
@@ -122,19 +122,19 @@
 						<div class="footer-contacts">
 							<div class="wrap">
 								<div class="address">
-									<p>26 Hillside Street<br>House 35<br>London, UK</p>
-								</div><a class="email" href="mailto:hello@blunes.com">hello@blunes.com</a><br><a class="phone" href="tel:5226669113">522-666-9113</a>
+									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
+									<p>London, UK</p>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-12">
 						<div class="social-links">
 							<ul>
-								<li><a class="facebook" href="#"></a></li>
-								<li><a class="twitter" href="#"></a></li>
-								<li><a class="instagram" href="#"></a></li>
-								<li><a class="dribbble" href="#"></a></li>
-								<li><a class="behance" href="#"></a></li>
+								<!-- <li><a class="facebook" href="#"></a></li> -->
+								<li><a class="linkedin" href="https://www.linkedin.com/in/rodolfodiniz/" target="_blank"></a></li>
+								<li><a class="medium" href="https://medium.com/@rodolfodinizbiazi" target="_blank"></a></li>
+								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
