--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="col-md-12">
 							<div class="works-grid">
 								<!-- <div class="works-gutter"></div><a class="work-item" href="hubli.html" data-groups="[&quot;app&quot;]"> -->
-									<div class="works-gutter"></div><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
+									<div class="works-gutter"></div><a class="work-item" href="project-hubli.html" data-groups="[&quot;app&quot;]">
 
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_1.png" alt="Hubli">
@@ -144,7 +144,7 @@
 
 
 
-								</a><a class="work-item" href="project-cluster2.html" data-groups="[&quot;app&quot;]">
+								</a><a class="work-item" href="project-cluster.html" data-groups="[&quot;app&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_2.png" alt="Cluster">
 									</div>
