--- a/project-hubli.html
+++ b/project-hubli.html
@@ -91,29 +91,58 @@ Each phase prepare you to move to the next phase. Within each of the phases the
 							</div>
 						</div>
 					</div>
-					<div class="mar-top-lg">
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-3 offset-md-1">
+								<h3 class="title">Engage</h3>
+							</div>
+							<div class="col-md-7">
+								<p>In the first phase, we move from an abstract big idea to a concrete and actionable challenge </p>
+								<p>To find the most suitable theme that would engage the whole team, we went through a series of processes. And a series of virtual post-its. Seriously.</p>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-5">
-								<div class="project-image"><img src="img/project-juicyway/logo.mp4" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_2.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-5 offset-md-2">
 								<div class="mar-top-xs">
-									<div class="project-image"><img src="img/project-juicyway/image_3.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-hubli/image_3.png" alt="Flyby"></div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 offset-md-4">
 								<div class="mar-top-sm">
-									<div class="project-image"><img src="img/project-juicyway/image_4.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-hubli/image_4.png" alt="Flyby"></div>
 								</div>
+							</div>
+						</div>
+					</div> -->
+					<div class="mar-top-lg">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_4a.png" alt="Partner Pages"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_3.png" alt="Partner Pages"></div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_2.png" alt="Partner Pages"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_4.png" alt="Partner Pages"></div>
 							</div>
 						</div>
 					</div>
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Lifting Off</h3>
+								<h3 class="title">Inestigate</h3>
 							</div>
 							<div class="col-md-7">
 								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
