--- a/project-hubli.html
+++ b/project-hubli.html
@@ -72,25 +72,47 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12">
-							<div class="mar-top-lg">
-								<!-- <div class="project-image"><img src="img/project-juicyway/image_1.png" alt="Flyby"></div> -->
-								<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/643102856?h=46baf3d9a3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="HubliVideoFinal"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-							</div>
-						</div>
-					</div>
+				<div class="col-md-12">
+					<div class="mar-top-lg">
+						<div class="project-image"><img src="img/project-hubli/image_1.png" alt="Flyby"></div>
+
+					<!-- </div> -->
+				</div>
+			</div>
+				</div>
+
 					<div class="project-content mar-top-lg">
 						<div class="row">
-							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Methodology</h3>
-							</div>
-							<div class="col-md-7">
+
+							<div class="col-md-10 offset-md-1">
+								<h3>Methology</h3>
 								<p>This project was conceived at Apple Developer Academy, by a group of five students. At the Academy we use the <b>Challenge Based Learning</b> (or CBL) which provides an efficient and effective framework for learning while solving real-world challenges. </p>
 								<p>The Challenge Learning Framework is divided into three interconnected phases: <b>Engage, Investigate and Act.</b>
-Each phase prepare you to move to the next phase. Within each of the phases there are opportunities for applying all sorts of methodologies and if necessary a return to an earlier phase.</p>
-							</div>
+								Each phase prepare you to move to the next phase. Within each of the phases there are opportunities for applying all sorts of methodologies and if necessary a return to an earlier phase.</p>
+	<!-- <div style="padding-top: 20px"> -->
+	<!-- <ul class="project-services">
+	<li style="color: #a6a7b5">2019</li> -->
+	<!-- <li>Art Direction</li> -->
+	<!-- </ul> -->
+	<!-- </div> -->
+								<!-- <ul class="project-services">
+									<li>Experiment</li> -->
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								<!-- </ul> -->
+						</div>
 						</div>
 					</div>
+					<!-- <div class="project-content mar-top-lg"> -->
+
+					<!-- <div class="row">
+						<div class="col-md-10 offset-md-1">
+							<div class="mar-top-lg">
+								<p>The interface of the menu revolves around the concept of having the game just one play-tap away. To achieve that, it was designed to work as a layer that goes on top while the intergalactic spaceship is always traveling through the Juicy Way right behind it.</p>
+								<!-- <span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
+								<!-- </div>
+							</div>
+						</div> -->
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
@@ -142,7 +164,7 @@ Each phase prepare you to move to the next phase. Within each of the phases the
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Inestigate</h3>
+								<h3 class="title">Investigate</h3>
 							</div>
 							<div class="col-md-7">
 								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
@@ -152,10 +174,21 @@ Each phase prepare you to move to the next phase. Within each of the phases the
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-juicyway/image_5.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-juicyway/image_6.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_5b.png" alt="Flyby"></div>
+							</div>
+						</div>
+					</div>
+
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-3 offset-md-1">
+								<h3 class="title">Act</h3>
+							</div>
+							<div class="col-md-7">
+								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
 							</div>
 						</div>
 					</div>
@@ -167,10 +200,21 @@ Each phase prepare you to move to the next phase. Within each of the phases the
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="mar-top-lg">
-								<div class="project-image"><img src="img/project-juicyway/image_9.png" alt="Flyby"></div>
+					<div class="mar-top-lg">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_4a.png" alt="Partner Pages"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_3.png" alt="Partner Pages"></div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_2.png" alt="Partner Pages"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_4.png" alt="Partner Pages"></div>
 							</div>
 						</div>
 					</div>
@@ -190,6 +234,29 @@ Each phase prepare you to move to the next phase. Within each of the phases the
 								<h3 class="title">Safe Landing</h3>
 							</div>
 							<div class="col-md-7">
+								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
+								<p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
+
+									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								<!-- </ul> -->
+								<!-- <br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p> -->
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="mar-top-lg">
+								<!-- <div class="project-image"><img src="img/project-juicyway/image_1.png" alt="Flyby"></div> -->
+								<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/643102856?h=46baf3d9a3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="HubliVideoFinal"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+							</div>
+						</div>
+					</div>
+
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-10 offset-md-1">
 								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
 								<p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
 
